<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.mlsdev.mlsdevstore.presentaion.account.AccountViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appbar_height"
            android:background="@android:color/white"
            android:elevation="4dp"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/navigation_title_account"
            app:titleTextAppearance="@style/ToolbarTextStyle"
            app:titleTextColor="@android:color/black" />

        <LinearLayout
            android:id="@+id/ll_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="0dp"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <TextView
                    style="@style/UserInfoTextStyle.Header"
                    android:text="@string/label_personal_info" />

                <Button
                    android:id="@+id/button_edit_personal_info"
                    style="@style/EditInfoButtonStyle"
                    android:text="@string/btn_edit" />

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin">

                    <TextView
                        android:id="@+id/user_email_label"
                        style="@style/WrapContentWidthTextStyle"
                        android:text="@string/label_email" />

                    <TextView
                        android:id="@+id/user_email"
                        style="@style/UserInfoTextStyle"
                        android:layout_marginBottom="8dp"
                        android:layout_toEndOf="@id/user_first_name_label"
                        android:text="@{viewModel.email}" />

                    <TextView
                        android:id="@+id/user_first_name_label"
                        style="@style/WrapContentWidthTextStyle"
                        android:layout_below="@id/user_email"
                        android:text="@string/label_first_name" />

                    <TextView
                        android:id="@+id/user_first_name"
                        style="@style/UserInfoTextStyle"
                        android:layout_below="@id/user_email"
                        android:layout_marginBottom="8dp"
                        android:layout_toEndOf="@id/user_first_name_label"
                        android:text="@{viewModel.firstName}" />

                    <TextView
                        android:id="@+id/user_last_name_label"
                        style="@style/WrapContentWidthTextStyle"
                        android:layout_below="@id/user_first_name"
                        android:text="@string/label_last_name" />

                    <TextView
                        android:id="@+id/user_last_name"
                        style="@style/UserInfoTextStyle"
                        android:layout_below="@id/user_first_name"
                        android:layout_marginBottom="8dp"
                        android:layout_toEndOf="@id/user_last_name_label"
                        android:text="@{viewModel.lastName}" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:padding="4dp">

                <TextView
                    style="@style/UserInfoTextStyle.Header"
                    android:text="@string/label_shipping_info" />

                <Button
                    android:id="@+id/button_edit_shipping_info"
                    style="@style/EditInfoButtonStyle"
                    android:text="@string/btn_edit" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin">

                    <TextView
                        android:id="@+id/user_phone_number_label"
                        style="@style/WrapContentWidthTextStyle"
                        android:text="@string/label_phone_number" />

                    <TextView
                        android:id="@+id/user_phone_number"
                        style="@style/UserInfoTextStyle"
                        android:layout_marginBottom="8dp"
                        android:layout_toEndOf="@id/user_phone_number_label"
                        android:text="@{viewModel.phoneNumber}" />

                    <TextView
                        android:id="@+id/shipping_address_label"
                        style="@style/WrapContentWidthTextStyle"
                        android:layout_below="@id/user_phone_number"
                        android:text="@string/label_address" />

                    <TextView
                        android:id="@+id/shipping_address"
                        style="@style/UserInfoTextStyle"
                        android:layout_below="@id/user_phone_number"
                        android:layout_marginBottom="8dp"
                        android:layout_toEndOf="@id/shipping_address_label"
                        android:text="@{viewModel.address}" />

                    <TextView
                        android:id="@+id/shipping_city_label"
                        style="@style/WrapContentWidthTextStyle"
                        android:layout_below="@id/shipping_address"
                        android:text="@string/label_city" />

                    <TextView
                        android:id="@+id/shipping_city"
                        style="@style/UserInfoTextStyle"
                        android:layout_below="@id/shipping_address"
                        android:layout_marginBottom="8dp"
                        android:layout_toEndOf="@id/shipping_city_label"
                        android:text="@{viewModel.city}" />

                    <TextView
                        android:id="@+id/shipping_state_label"
                        style="@style/WrapContentWidthTextStyle"
                        android:layout_below="@id/shipping_city"
                        android:text="@string/label_state_or_province" />

                    <TextView
                        android:id="@+id/shipping_state"
                        style="@style/UserInfoTextStyle"
                        android:layout_below="@id/shipping_city"
                        android:layout_marginBottom="8dp"
                        android:layout_toEndOf="@id/shipping_state_label"
                        android:text="@{viewModel.state}" />

                    <TextView
                        android:id="@+id/shipping_zip_label"
                        style="@style/WrapContentWidthTextStyle"
                        android:layout_below="@id/shipping_state"
                        android:text="@string/label_postal_code" />

                    <TextView
                        android:id="@+id/shipping_zip"
                        style="@style/UserInfoTextStyle"
                        android:layout_below="@id/shipping_state"
                        android:layout_marginBottom="8dp"
                        android:layout_toEndOf="@id/shipping_zip_label"
                        android:text="@{viewModel.zip}" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>
</layout>