<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.mlsdev.mlsdevstore.presentaion.cart.CartViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/appbar_height"
            android:background="@android:color/white"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/appbar_height"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/navigation_title_cart"
                app:titleTextAppearance="@style/ToolbarTextStyle"
                app:titleTextColor="@android:color/black" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.mlsdev.animatedrv.AnimatedRecyclerView
            android:id="@+id/items_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/button_checkout"
            android:clipToPadding="true"
            android:paddingBottom="60dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <LinearLayout
            android:id="@+id/empty_cart_placeholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{viewModel.cartIsEmpty ? View.VISIBLE : View.GONE}">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_empty_cart"
                android:tint="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_empty_cart" />

        </LinearLayout>

        <Button
            android:id="@+id/button_checkout"
            style="@style/AccentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/btn_checkout"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="@{!viewModel.cartIsEmpty ? View.VISIBLE : View.GONE}" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>